WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111522
Autoreleased cached pages slow down the PLT by 2%
https://bugs.webkit.org/show_bug.cgi?id=111522
Summary
Autoreleased cached pages slow down the PLT by 2%
Geoffrey Garen
Reported
2013-03-05 22:08:38 PST
Autoreleased cached pages slow down the PLT by 2%
Attachments
Patch
(1.11 KB, patch)
2013-03-05 22:10 PST
,
Geoffrey Garen
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2013-03-05 22:10:28 PST
Created
attachment 191652
[details]
Patch
Geoffrey Garen
Comment 2
2013-03-05 22:55:54 PST
Committed
r144884
: <
http://trac.webkit.org/changeset/144884
>
Darin Adler
Comment 3
2013-03-07 09:23:30 PST
What were we getting by autoreleasing? I would trust this patch more if the change log stated what changed between the time we added it and now when we are removing it.
Geoffrey Garen
Comment 4
2013-03-07 11:48:38 PST
> What were we getting by autoreleasing?
Originally, it was a hack to avoid doing any document tear-down while running PLT1.
> I would trust this patch more if the change log stated what changed between the time we added it and now when we are removing it.
I can't say for sure what changed, but if I had to speculate, I'd say this: (1) Web pages are large enough these days that eagerly reclaiming memory can be a cache locality win. (2) Garbage collection is a more robust way to gain whatever advantage is attributable to lazy tear-down, especially since most pages don't make it into the page cache. (3) PLT3 is a more representative benchmark than PLT1.
Simon Fraser (smfr)
Comment 5
2013-03-15 21:30:44 PDT
This caused
bug 112205
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug