Autoreleased cached pages slow down the PLT by 2% https://bugs.webkit.org/show_bug.cgi?id=111522

Reviewed by Filip Pizlo.

Let's stop doing that.

2% PLT speedup.

* history/PageCache.cpp:
(WebCore::PageCache::remove):


Canonical link: https://commits.webkit.org/129905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144884 268f45cc-cd09-0410-ab3c-d52691b4dbfc